[package]
name = "lib-poem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.44", features = ["test"] }
tokio = { version = "1.21.1", features = ["rt", "rt-multi-thread", "macros"] }
sea-orm = "0.9.2"
serde = "1.0.145"