[package]
name = "sea-orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
lazy_static = "1.4.0"
tokio = { version = "1.21.2", features = ["full"] }
sea-orm = { version = "^0.9.0", features = [
    "sqlx-mysql",
    "runtime-async-std-native-tls",
    "macros",
] }
